--- a/style.scss
+++ b/style.scss
@@ -56,7 +56,7 @@ header {
                                         font-size: 20px;
                                     }
                         }
-                        .menu-icon:target .menu-overlay {
+                        .menu-icon:target #menu-overlay {
                             display: flex;
                         }
                 }
@@ -90,14 +90,6 @@ header {
                     height: 100%;
                     width: 100%;
                     display: none;
-                }
-                #menu-overlay:target {
-                    display: block;
-                }
-                #menu-overlay:target .overlay {
-                    display: block;
-                    left: 0; 
-                }
                         .overlay {
                             background-color: $overlay-bg-color1;
                             height: 100%;
@@ -110,7 +102,7 @@ header {
                             padding-left: 0;
                             margin: 0;
                             list-style: none;
-                            transition: left 0.5s;
+                            transition: all 0.5s;
                                 li {
                                     padding: 10px 20px;
                                         a {
@@ -125,20 +117,26 @@ header {
                                         }
                                 }
                         }
-                        .close {
+                       .close {
                             position: absolute;
                             top: 25px;
                             right: 5%;
-                            display: none;
                                 a {
                                     color: $overlay-color;
                                     font-size: 25px;
                                 }
-                        }
-                        #menu-overlay:target .close {
-                            display: block;
-                        }             
-        }
+                        } 
+                }
+                #menu-overlay:target {
+                    display: block;
+                } 
+                #menu-overlay:target .overlay {
+                    left: 0; 
+                }
+                #menu-overlay:target .close {
+                    display: block;
+                } 
+        }                                  
 }
 
 @media (min-width: 1000px) {
@@ -233,9 +231,8 @@ main {
                     margin: 0;
                     display: flex;
                     justify-content: center;
-                    
                         img {
-                            width: 100%;
+                            width: 440px;
                             height: auto;
                         }    
                 }
@@ -246,6 +243,65 @@ main {
     main {
         .bg-img {
             padding: 10px 5%;
+        }
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 600px) {
+    main {
+        .bg-img {
+            padding: 10px 5%;
+            display: flex;
+            flex-direction: column-reverse;
+            background-size: 100% 740px;
+            height: 100%;
+                div {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 0;
+                        h1 {
+                            text-align: center;
+                        }
+                }
+                .main-img {
+                    display: flex;
+                    align-items: center; 
+                }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    main {
+        .bg-img {
+            display: flex;
+            flex-direction: column-reverse;
+            background-size: 100% 740px;
+                div {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 0;
+                        h1 {
+                            width: 90%;
+                            text-align: center;
+                            font-size: 36px;
+                            padding-bottom: 10px;
+                        }
+                        .buttons {
+                            display: flex;
+                            flex-direction: column;
+                            margin-top: 5px;
+                                button {
+                                    margin: 5px;
+                                } 
+                        }
+                }
+                .main-img {
+                    display: flex;
+                    align-items: center; 
+                }    
         }
     }
 }
@@ -610,5 +666,3 @@ main {
                 }
         }
 }
-
-
