--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
       header nav .logo .menu-icon a {
         color: #004289;
         font-size: 20px; }
-    header nav .logo .menu-icon:target .menu-overlay {
+    header nav .logo .menu-icon:target #menu-overlay {
       display: flex; }
     header nav .menu {
       font-family: "Montserrat", sans-serif;
@@ -72,42 +72,40 @@ header {
       height: 100%;
       width: 100%;
       display: none; }
+      header nav .menu-overlay .overlay {
+        background-color: rgba(19, 39, 57, 0.8);
+        height: 100%;
+        width: 220px;
+        position: fixed;
+        top: 0;
+        left: -220px;
+        z-index: 2;
+        padding-top: 25px;
+        padding-left: 0;
+        margin: 0;
+        list-style: none;
+        transition: all 0.5s; }
+        header nav .menu-overlay .overlay li {
+          padding: 10px 20px; }
+          header nav .menu-overlay .overlay li a {
+            color: #fff;
+            font-family: "Open Sans", sans-serif;
+            font-weight: 500;
+            line-height: 1.5;
+            text-decoration: none; }
+          header nav .menu-overlay .overlay li a:hover {
+            color: #007bff; }
+      header nav .menu-overlay .close {
+        position: absolute;
+        top: 25px;
+        right: 5%; }
+        header nav .menu-overlay .close a {
+          color: #fff;
+          font-size: 25px; }
     header nav #menu-overlay:target {
       display: block; }
     header nav #menu-overlay:target .overlay {
-      display: block;
       left: 0; }
-    header nav .overlay {
-      background-color: rgba(19, 39, 57, 0.8);
-      height: 100%;
-      width: 220px;
-      position: fixed;
-      top: 0;
-      left: -220px;
-      z-index: 2;
-      padding-top: 25px;
-      padding-left: 0;
-      margin: 0;
-      list-style: none;
-      transition: left 0.5s; }
-      header nav .overlay li {
-        padding: 10px 20px; }
-        header nav .overlay li a {
-          color: #fff;
-          font-family: "Open Sans", sans-serif;
-          font-weight: 500;
-          line-height: 1.5;
-          text-decoration: none; }
-        header nav .overlay li a:hover {
-          color: #007bff; }
-    header nav .close {
-      position: absolute;
-      top: 25px;
-      right: 5%;
-      display: none; }
-      header nav .close a {
-        color: #fff;
-        font-size: 25px; }
     header nav #menu-overlay:target .close {
       display: block; }
 
@@ -187,12 +185,55 @@ main {
       display: flex;
       justify-content: center; }
       main .bg-img .main-img img {
-        width: 100%;
+        width: 440px;
         height: auto; }
 
 @media (max-width: 1000px) {
   main .bg-img {
     padding: 10px 5%; } }
+
+@media (max-width: 1000px) and (min-width: 600px) {
+  main .bg-img {
+    padding: 10px 5%;
+    display: flex;
+    flex-direction: column-reverse;
+    background-size: 100% 740px;
+    height: 100%; }
+    main .bg-img div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 0; }
+      main .bg-img div h1 {
+        text-align: center; }
+    main .bg-img .main-img {
+      display: flex;
+      align-items: center; } }
+
+@media (max-width: 600px) {
+  main .bg-img {
+    display: flex;
+    flex-direction: column-reverse;
+    background-size: 100% 740px; }
+    main .bg-img div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 0; }
+      main .bg-img div h1 {
+        width: 90%;
+        text-align: center;
+        font-size: 36px;
+        padding-bottom: 10px; }
+      main .bg-img div .buttons {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5px; }
+        main .bg-img div .buttons button {
+          margin: 5px; }
+    main .bg-img .main-img {
+      display: flex;
+      align-items: center; } }
 
 /* --- ABOUT US --- */
 .about {
