--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ header {
       z-index: 1;
       height: 100%;
       width: 100%;
-      display: none; }
+      visibility: hidden;
+      opacity: 0; }
       header nav .menu-overlay .overlay {
         background-color: rgba(19, 39, 57, 0.8);
         height: 100%;
@@ -103,7 +104,8 @@ header {
           color: #fff;
           font-size: 25px; }
     header nav #menu-overlay:target {
-      display: block; }
+      visibility: visible;
+      opacity: 1; }
     header nav #menu-overlay:target .overlay {
       left: 0; }
     header nav #menu-overlay:target .close {
@@ -238,14 +240,15 @@ main {
 /* --- ABOUT US --- */
 .about {
   height: 100%;
-  padding: 20px 10%; }
+  padding: 20px 10%;
+  margin-bottom: 40px; }
   .about .titulo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; }
     .about .titulo h2 {
-      margin-top: 80px;
+      margin-top: 6   0px;
       color: #283d50;
       font-family: "Montserrat", sans-serif;
       font-size: 36px;
@@ -260,34 +263,98 @@ main {
       text-align: center;
       height: 45px;
       width: 460px; }
-  .about .info-columns {
+  .about .info-columns, .about .info-columns-mid {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center; }
-    .about .info-columns .info-col-1 {
+    .about .info-columns .info-col-text, .about .info-columns-mid .info-col-text {
       display: flex;
       flex-direction: column;
       width: 50%; }
-      .about .info-columns .info-col-1 p {
+      .about .info-columns .info-col-text h3, .about .info-columns-mid .info-col-text h3 {
+        color: #283d50;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 1.2;
+        margin-bottom: 5px; }
+      .about .info-columns .info-col-text p, .about .info-columns-mid .info-col-text p {
         color: #444;
         font-family: "Open Sans", sans-serif;
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.5; }
-      .about .info-columns .info-col-1 .data {
+        line-height: 1.5;
+        margin-bottom: 5px; }
+      .about .info-columns .info-col-text .data, .about .info-columns-mid .info-col-text .data {
         display: flex;
         flex-direction: row;
-        justify-content: center;
         align-items: center; }
-        .about .info-columns .info-col-1 .data .data-paragraph {
+        .about .info-columns .info-col-text .data .about-icons, .about .info-columns-mid .info-col-text .data .about-icons {
+          color: #007bff;
           display: flex;
-          flex-direction: column;
-          justify-content: center; }
-    .about .info-columns .info-col-2 {
+          justify-content: center;
+          align-items: center;
+          border-radius: 50%;
+          border: 2px solid #007bff;
+          transition: all 0.5s;
+          width: 64px;
+          height: 64px;
+          margin-bottom: 10px; }
+          .about .info-columns .info-col-text .data .about-icons i, .about .info-columns-mid .info-col-text .data .about-icons i {
+            font-size: 24px; }
+      .about .info-columns .info-col-text .data:hover .about-icons, .about .info-columns-mid .info-col-text .data:hover .about-icons {
+        color: #fff;
+        background-color: #007bff; }
+      .about .info-columns .info-col-text .data-paragraph, .about .info-columns-mid .info-col-text .data-paragraph {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 10px;
+        width: 370px;
+        margin-left: 15px; }
+        .about .info-columns .info-col-text .data-paragraph h4, .about .info-columns-mid .info-col-text .data-paragraph h4 {
+          color: #283d50;
+          font-family: 'Montserrat', sans-serif;
+          font-size: 18px;
+          font-weight: 700;
+          line-height: 1.5;
+          margin: 0; }
+        .about .info-columns .info-col-text .data-paragraph p, .about .info-columns-mid .info-col-text .data-paragraph p {
+          color: #444;
+          font-family: "Open Sans", sans-serif;
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 1.5;
+          margin-top: 5px; }
+        .about .info-columns .info-col-text .data-paragraph a, .about .info-columns-mid .info-col-text .data-paragraph a {
+          text-decoration: none;
+          color: #283d50; }
+    .about .info-columns .info-col-img, .about .info-columns-mid .info-col-img {
       width: 50%; }
-      .about .info-columns .info-col-2 img {
+      .about .info-columns .info-col-img img, .about .info-columns-mid .info-col-img img {
+        width: 90%;
+        margin: 20px; }
+
+@media (max-width: 1000px) {
+  .about .info-columns {
+    display: flex;
+    flex-direction: column-reverse; }
+    .about .info-columns .info-col-text {
+      width: 100%; }
+      .about .info-columns .info-col-text .data-paragraph {
         width: 100%; }
+    .about .info-columns .info-col-img {
+      width: 100%; }
+  .about .info-columns-mid {
+    display: flex;
+    flex-direction: column; }
+    .about .info-columns-mid .info-col-text {
+      width: 100%; }
+      .about .info-columns-mid .info-col-text .data-paragraph {
+        width: 100%; }
+    .about .info-columns-mid .info-col-img {
+      width: 100%; } }
 
 /* --- FOOTER --- */
 .footer-1 {
