--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ header {
           text-decoration: none; }
         header nav .menu ul li a:hover {
           color: #007bff; }
+        header nav .menu ul li a:active {
+          color: red; }
     header nav .menu-overlay {
       background-color: rgba(19, 39, 57, 0.9);
       position: fixed;
