--- a/style.scss
+++ b/style.scss
@@ -1015,6 +1015,150 @@ main {
             }
     }
 }
+/* --- CONTACT US --- */
+#contact_us {
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+    padding: 60px 0;
+    overflow: hidden;
+  
+    .contact-header {
+      position: relative;
+      text-align: center;
+      padding: 0px 0px 30px;
+      h3 {
+        font-family: "Monserrat", sans-serif;
+        margin: 0px 0px 10px;
+        font-weight: 500;
+        font-size: 36px;
+        padding: 0;
+        border: 0;
+      }
+    }
+  
+    #contact-container {
+      font-family: $cnt-font;
+      display: flex;
+      width: 100%;
+      height: auto;
+      #contact-map {
+        display: flex;
+        margin-bottom: 20px;
+        width: 100%;
+        height: auto;
+        padding: 0px 15px;
+        iframe {
+          margin: 0;
+          padding: 0;
+        }
+      }
+      .contact-information {
+        width: 100%;
+        height: auto;
+        font-family: $cnt-font;
+  
+        .contact-details {
+          display: flex;
+          justify-content: space-between;
+          padding: 10px;
+          align-items: baseline;
+  
+          i {
+            font-size: 32px;
+            color: $cnt-color-1;
+            float: left;
+            line-height: 1;
+          }
+          p {
+            padding: 0 0 10px 36px;
+            line-height: 28px;
+            font-size: 15px;
+            margin: 0 0 5px 0;
+          }
+        }
+        .contact-form {
+          width: 100%;
+          height: auto;
+  
+          fieldset {
+            border: none;
+            padding: 0;
+            margin: 0;
+  
+            .first_cnt,
+            .second_cnt {
+              display: inline-block;
+              padding: 0px;
+              margin: 0px;
+              width: 100%;
+              height: auto;
+              border: 0px;
+              font-family: $cnt-font;
+              input[type="email"],
+              input[type="text"]::placeholder {
+                font-family: $cnt-font;
+                color: $letter-color;
+              }
+            }
+            #nombre_cnt,
+            #email_cnt {
+              width: 48%;
+              height: auto;
+              padding: 6px 12px;
+              border: 1px solid $cnt_border;
+              margin: 5px;
+              line-height: 1.5;
+            }
+            #subject_cnt {
+              width: 98%;
+              height: auto;
+              border: 1px solid $cnt_border;
+              margin: 5px;
+              line-height: 1.5;
+              padding: 6px 12px;
+            }
+          }
+          .third_cnt {
+            #textarea_cnt {
+              font-size: 14px;
+              padding: 6px 12px;
+              width: 98%;
+              height: auto;
+              top: 10px;
+              border: 1px solid#ced4da;;
+              margin: 5px;
+              line-height: 1.5;
+              #textarea_cnt::placeholder {
+                font-family: 'Open Sans', sans-serif;
+                color: #495057;
+              }
+            }
+          }
+        }
+      }
+    }
+  
+    .button_cnt {
+      position: absolute;
+      right: 200px;
+      border: none;
+      button[type="submit"] {
+        font-family: "Montserrat", sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+        background: $cnt-color-1;
+        border: 0;
+        border-radius: 20px;
+        padding: 10px 35px;
+        color: #fff;
+        transition: 0.3s;
+      }
+      button[type="submit"]:hover {
+        background-color: $cnt-color-2;
+      }
+    }
+  }
+
 
 /* --- FOOTER --- */
 
