--- a/_variables.scss
+++ b/_variables.scss
@@ -83,3 +83,11 @@ $footer-font-size: 14px;
 $footer-font-weight: 400;
 $footer-line-height: 1.5;
 $footer-hover: #007bff;
+
+/* CONTACT US */
+$cnt-font: 'Open Sans', sans-serif;
+$cnt-color-1:#007bff;
+$cnt-color-2: #004a99;
+$font-color: #495057;
+$cnt_border: #ced4da;
+
