--- a/style.scss
+++ b/style.scss
@@ -174,8 +174,8 @@ main {
         .bg-img {
             padding: 20px 10%;
             background-image: url(images/intro-bg.png);
-            background-repeat: no-repeat;
-            background-size: 100% 600px;
+            /*background-repeat: no-repeat;
+            background-size: 100% 600px;*/
             height: 600px;
             display: flex;
             flex-direction: row;
@@ -739,149 +739,127 @@ main {
 /* --- PORTFOLIO --- */
 
 .portfolio {
-    height: 100%;
     margin-bottom: 40px;
-    padding: 20px 11%; 
-        .titulo {
+    .titulo {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h2 {
+        margin-top: 60px;
+        color: $h2-color;
+        font-family: $h2-font;
+        font-size: $h2-font-size;
+        font-weight: $h2-font-weight;
+        margin-bottom: 20px;
+        }
+    }
+    .pf-buttons {
+        width: 100%;
+        margin: 40px 0;
+        ul {
             display: flex;
-            flex-direction: column;
             justify-content: center;
-            align-items: center;
-                h2 {
-                    margin-top: 60px;
-                    color: $h2-color;
-                    font-family: $h2-font;
-                    font-size: $h2-font-size;
-                    font-weight: $h2-font-weight;
-                    margin-bottom: 20px;
+            margin: 0;
+            padding: 0;
+            li {
+                list-style: none;
+                margin: 0;
+                .button {
+                background-color: #ecf5ff;
+                border: none;
+                color: #007bff;
+                border-radius: 50px;
+                margin: 5px 5px;
+                padding: 10px 15px;
+                text-align: center;
+                text-decoration: none;
+                font-family: 'Open Sans', sans-serif;
+                font-size: 12px;
+                transition: all 0.5s;
                 }
-        }
-        .pf-buttons {
-            width: 100%;
-            margin: 40px 0;
-                ul {
+               .button:hover {
+                    color: #fff;
+                    background-color: #007bff;
+                }
+            }
+        }            
+    }
+    .pf-images {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        .img-container {
+            width: 350px;
+            height: 250px;
+            margin: 15px;
+            border-radius: 10px;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            .img-cont-hover {
+                width: 350px;
+                height: 250px;
+                border-radius: 10px;
+                background-color: $overlay-bg-color1;
+                position: relative;
+                top: 0;
+                transition: all 0.5s;
+                .img-cont-info {
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
                     justify-content: center;
-                    margin: 0;
-                    padding: 0;
-                        li {
-                            list-style: none;
-                            margin: 0;
-                                .button {
-                                    background-color: #ecf5ff;
-                                    border: none;
-                                    color: #007bff;
-                                    border-radius: 50px;
-                                    margin: 5px 5px;
-                                    padding: 10px 15px;
-                                    text-align: center;
-                                    text-decoration: none;
-                                    font-family: 'Open Sans', sans-serif;
-                                    font-size: 12px;
-                                    transition: all 0.5s;
-                                }
-                                .button:hover {
-                                    color: #fff;
-                                    background-color: #007bff;
-                                }
-                        }
-                }    
-            
-        }
-        .pf-images {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-                .img-container {
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    width: 350px;
-                    height: 250px;
-                    margin: 15px;
-                    border-radius: 10px;
-                    overflow: hidden;
-                        img {
-                            width: 100%;
-                        }
-                        .app2 {
-                            position: relative;
-                            bottom: 180px;
-                        }
-                        .card2 {
-                            position: relative;
-                            bottom: 130px;
-                        }
-                        .web2 {
-                            position: relative;
-                            bottom: 130px;
-                        }
-                        .app3 {
-                            width: 120%;
-                        }
-                        .img-cont-hover {
-                            display: flex;
-                            flex-wrap: wrap;
-                            justify-content: center;
-                            width: 350px;
-                            height: 250px;
-                            border-radius: 10px;
-                            background-color: $overlay-bg-color1;
-                            position: absolute;
-                            visibility: visible;
-                            opacity: 0;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    h3 {
+                        margin: 0;
+                        color: #fff;
+                        font-family: 'Montserrat', sans-serif;
+                        font-size: 22px;
+                        font-weight: 700;
+                        a {
+                            text-decoration: none;
+                            color: #fff;
                             transition: all 0.5s;
-                                .img-cont-info {
-                                    display: flex;
-                                    flex-direction: column;
-                                    justify-content: center;
-                                    align-items: center;
-                                        h2 {
-                                            margin: 0;
-                                            color: #fff;
-                                            font-family: 'Montserrat', sans-serif;
-                                            font-size: 22px;
-                                            font-weight: 700;
-                                                a {
-                                                    text-decoration: none;
-                                                    color: #fff;
-                                                    transition: all 0.5s;
-                                                }
-                                                a:hover {
-                                                    color: #007bff;
-                                                }
-                                        }
-                                        p {
-                                            color: #d8eafe;
-                                            font-weight: 500;
-                                            font-size: 14px;
-                                            font-family: $p-font;
-                                        }
-                                        .img-links {
-                                            i {
-                                                color: #fff;
-                                                background-color: #007bff;
-                                                line-height: 1;
-                                                text-align: center;
-                                                width: 36px;
-                                                height: 36px;
-                                                border-radius: 50%;
-                                                padding-top: 10px;
-                                                transition: all 0.5s;
-                                            }
-                                            i:hover {
-                                                background-color: #62aeff;
-                                            }
-                                        }
-                                }
                         }
-                        .img-cont-hover:hover {
-                            visibility: visible;
-                            opacity: 1;
+                        a:hover {
+                            color: #007bff;
                         }
+                    }
+                    p {
+                        color: #d8eafe;
+                        font-weight: 500;
+                        font-size: 14px;
+                        font-family: $p-font;
+                    }
+                    .img-links {
+                       i {
+                            color: #fff;
+                            background-color: #007bff;
+                            line-height: 1;
+                            text-align: center;
+                            width: 36px;
+                            height: 36px;
+                            border-radius: 50%;
+                            padding-top: 10px;
+                            transition: all 0.5s;
+                        }
+                       i:hover {
+                            background-color: #62aeff;
+                        }
+                    }
                 }
+            }
         }
+        .img-container:hover .img-cont-hover {
+            transform: translateY(-254px);
+        }                    
+    }
 }
 
 /* --- TESTIMONIALS --- */
@@ -910,7 +888,7 @@ main {
             align-items: flex-start;
             width: 80%;
                 img {
-                    width: 120px;
+                    width: 175px;
                     border-radius: 50%;
                     border: 4px solid #fff;
                     margin-right: 20px;
@@ -1013,6 +991,118 @@ main {
                 flex-direction: row;
                 justify-content: center;
             }
+    }
+}
+
+/*---------------------------TEAM-------------------------------*/
+
+.team {
+    .team-section-header {
+        text-align: center;
+        padding: 40px 0 70px;
+        h2 {
+            font-size: $h2-font-size;
+            font-weight: $h2-font-weight;
+            font-family: $h2-font;
+            color: $h2-color;
+        }
+        p {
+            color: #556877;
+            font-family: $p-font;
+            font-size: $p-font-size;
+            line-height: $p-line-height;
+        }
+    }
+    .team-img-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap; 
+        padding-bottom: 20px;
+        .team-row1, .team-row2 {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            .team-img {
+                width: 250px;
+                height: 250px;
+                margin-right: 15px;
+                overflow: hidden;
+                border-radius: 50%;
+                background-size: 100%;
+                .team-overlay {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    color: #fff;
+                    background-color: rgba(0, 74, 153, 0.5);
+                    transition: all 0.6s;
+                    width: 250px;
+                    height: 250px;
+                    position: relative;
+                    top: 250px;
+                    text-align: center;
+                    h4 {
+                        margin-bottom: 2px;
+                        color: #fff;
+                        font-size: 18px;
+                        font-weight: 700;
+                        font-family: 'Montserrat', sans-serif;
+                    }
+                    p {
+                        color: #fff;
+                        margin-bottom: 35px;
+                        font-size: 12px;
+                        font-style: italic;
+                        font-family: 'Open Sans', sans-serif;
+                    }
+                    a {
+                        text-decoration: none;
+                        margin: 3px;
+                        color: #fff;
+                        background: transparent;
+                        transition: color 0.3s;
+                    }
+                    a:hover {
+                        color: #007bff;
+                    }
+                }    
+            }
+            .team-img:hover .team-overlay {
+                    transform: translateY(-250px);
+                    z-index: 3;
+                }
+            #img1 {
+                background-image: url("images/team-01.jpg");
+            }
+            #img2 {
+                background-image: url("images/team-02.jpg");
+            }
+            #img3 {
+                background-image: url("images/team-03.jpg");
+            }
+            #img4 {
+                background-image: url("images/team-04.jpg");
+            }            
+        }
+    }
+}
+
+@media (max-width:600px) {
+    .team-row1, .team-row2 {
+     flex-direction: column;
+     align-items: center;
+     }
+   
+     .team-img {
+      margin-bottom: 20px;
+     }
+   }
+   
+   @media (max-width:900px) {
+    .team-row1, .team-row2 {
+     flex: 100%;
+     margin-bottom: 20px;
     }
 }
 
