--- a/style.css
+++ b/style.css
@@ -884,6 +884,22 @@ main {
       flex-direction: row;
       justify-content: center; } }
 
+/* --- CLIENTS --- */
+#clients_container {
+  width: 100%;
+  height: auto; }
+  #clients_container .clients_imgs {
+    display: flex;
+    flex-direction: column; }
+    #clients_container .clients_imgs .client-logo {
+      display: inline-block; }
+    #clients_container .clients_imgs img {
+      transition: all 0.4s ease-in-out;
+      height: auto;
+      width: 200px;
+      display: inline-block;
+      margin: 20px; }
+
 /* --- CONTACT US --- */
 #contact_us {
   box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
