--- a/style.scss
+++ b/style.scss
@@ -1016,26 +1016,138 @@ main {
   }
 }
 
-/* --- CLIENTS --- */
-#clients_container {
-  width: 100%;
-  height: auto;
-  .clients_imgs {
-    display: flex;
-    flex-direction: column;
-    .client-logo {
-      display: inline-block;
-        }
-    img {
-      transition: all 0.4s ease-in-out;
-      height: auto;
-      width: 200px;
-      display: inline-block;
-      margin: 20px;
-    }
-  }
+/*--- TEAM ---*/
+
+.team {
+	.team-section-header {
+			text-align: center;
+			padding: 40px 0 70px;
+			h2 {
+					font-size: $h2-font-size;
+					font-weight: $h2-font-weight;
+					font-family: $h2-font;
+					color: $h2-color;
+			}
+			p {
+					color: #556877;
+					font-family: $p-font;
+					font-size: $p-font-size;
+					line-height: $p-line-height;
+			}
+	}
+	.team-img-container {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap; 
+			padding-bottom: 20px;
+			.team-row1, .team-row2 {
+					display: flex;
+					justify-content: center;
+					margin-bottom: 20px;
+					.team-img {
+							width: 250px;
+							height: 250px;
+							margin-right: 15px;
+							overflow: hidden;
+							border-radius: 50%;
+							background-size: 100%;
+							.team-overlay {
+									display: flex;
+									flex-direction: column;
+									justify-content: center;
+									align-items: center;
+									color: #fff;
+									background-color: rgba(0, 74, 153, 0.5);
+									transition: all 0.6s;
+									width: 250px;
+									height: 250px;
+									position: relative;
+									top: 250px;
+									text-align: center;
+									h4 {
+											margin-bottom: 2px;
+											color: #fff;
+											font-size: 18px;
+											font-weight: 700;
+											font-family: 'Montserrat', sans-serif;
+									}
+									p {
+											color: #fff;
+											margin-bottom: 35px;
+											font-size: 12px;
+											font-style: italic;
+											font-family: 'Open Sans', sans-serif;
+									}
+									a {
+											text-decoration: none;
+											margin: 3px;
+											color: #fff;
+											background: transparent;
+											transition: color 0.3s;
+									}
+									a:hover {
+											color: #007bff;
+									}
+							}    
+					}
+					.team-img:hover .team-overlay {
+									transform: translateY(-250px);
+							}
+					#img1 {
+							background-image: url("images/team/team-01.jpg");
+					}
+					#img2 {
+							background-image: url("images/team/team-02.jpg");
+					}
+					#img3 {
+							background-image: url("images/team/team-03.jpg");
+					}
+					#img4 {
+							background-image: url("images/team/team-04.jpg");
+					}            
+			}
+	}
 }
 
+@media (max-width:600px) {
+	.team-row1, .team-row2 {
+	 flex-direction: column;
+	 align-items: center;
+	 }
+ 
+	 .team-img {
+		margin-bottom: 20px;
+	 }
+}
+ 
+ @media (max-width:900px) {
+	.team-row1, .team-row2 {
+	 flex: 100%;
+	 margin-bottom: 20px;
+	}
+}
+
+/* --- CLIENTS --- */
+
+#clients_container {
+	width: 100%;
+	height: auto;
+	.clients_imgs {
+	  display: flex;
+	  flex-direction: column;
+	  .client-logo {
+		display: inline-block;
+		  }
+	  img {
+		transition: all 0.4s ease-in-out;
+		height: auto;
+		width: 200px;
+		display: inline-block;
+		margin: 20px;
+	  }
+	}
+  }
+  
 /* --- CONTACT US --- */
 
 #contact_us {
